@@ -113,7 +113,7 @@
    <strong><tag:priority_label />&nbsp;</strong>
   </td>
   <td class="item">
-   <select id="priority" name="x_priority" tabindex="<tag:priority_tabindex />">
+   <select id="priority" name="priority" tabindex="<tag:priority_tabindex />">
 <loop:pri_opt>
     <option value="<tag:pri_opt.val />" <if:pri_opt.selected>selected="selected" </if:pri_opt.selected>><tag:pri_opt.label /></option>
 </loop:pri_opt>
