@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Simplify and improve priority header generation/display.
 [mms] Add Face: header support to IMP.
 [mms] Add splitbar to resize sidebar in DIMP.
 [mms] Use LIST-EXTENDED IMAP extension (RFC 5258) to get subscribed
